; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_time.c_timerfd_callback.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_time.c_timerfd_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fd*)* @timerfd_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timerfd_callback(%struct.fd* %0) #0 {
  %2 = alloca %struct.fd*, align 8
  store %struct.fd* %0, %struct.fd** %2, align 8
  %3 = load %struct.fd*, %struct.fd** %2, align 8
  %4 = getelementptr inbounds %struct.fd, %struct.fd* %3, i32 0, i32 0
  %5 = call i32 @lock(i32* %4)
  %6 = load %struct.fd*, %struct.fd** %2, align 8
  %7 = getelementptr inbounds %struct.fd, %struct.fd* %6, i32 0, i32 2
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* %8, align 4
  %11 = load %struct.fd*, %struct.fd** %2, align 8
  %12 = getelementptr inbounds %struct.fd, %struct.fd* %11, i32 0, i32 1
  %13 = call i32 @notify(i32* %12)
  %14 = load %struct.fd*, %struct.fd** %2, align 8
  %15 = getelementptr inbounds %struct.fd, %struct.fd* %14, i32 0, i32 0
  %16 = call i32 @unlock(i32* %15)
  %17 = load %struct.fd*, %struct.fd** %2, align 8
  %18 = call i32 @poll_wakeup(%struct.fd* %17)
  ret void
}

declare dso_local i32 @lock(i32*) #1

declare dso_local i32 @notify(i32*) #1

declare dso_local i32 @unlock(i32*) #1

declare dso_local i32 @poll_wakeup(%struct.fd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
